# ChefScript

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: lint.yml  release.yml  test.yml
src/ChefScript/: __main__.py  interpreter.py  parser.py  utils.py
src/pychef/: __init__.py  ingredient.py  recipe.py  utils.py
tests/: 红烧肉.chefscript
